Updated the gradle 2.2.1 and set the compatability tests to 2.x